resources/tests/invalid_syntax/unary_increment.ct
//`'++' and '--' operator can only be applied on variables!
//1
fn main()->i64 {
  ++10;
}